tests/feature_tests/error_pointer_math.c
int main() {
  int* a; int *b;

  // error: invalid operand types for binary addition
  a + b;

  // error: invalid operand types for binary multiplication
  a * b;

  // error: invalid operand types for binary division
  a / b;

  // error: invalid operand types for binary subtraction
  3 - a;
}
